# leptess

./: Cargo.toml
examples/: low_level_ocr_word_by_word.rs
src/: lib.rs
src/tesseract/: mod.rs  monitor.rs  orientation.rs
src/tesseract/renderer/: mod.rs  pdf_renderer.rs
tests/: full_page_ocr.rs
