[package]
name = "leptess"
version = "0.11.0"
authors = ["QP Hou <dave2008713@gmail.com>", "Chris Couzens <ccouzens@gmail.com>"]
description = "Productive Rust binding for Tesseract and Leptonica."
homepage = "https://github.com/houqp/leptess"
repository = "https://github.com/houqp/leptess"
readme = "README.md"
keywords = ["leptonica", "tesseract", "ocr", "image"]
license = "MIT"
documentation = "https://houqp.github.io/leptess/leptess/index.html"

[dependencies]
leptonica-sys = "0.3.4"
tesseract-sys = "0.5.5"
thiserror = "1"
num-traits = "0.2.14"
num-derive = "0.3.3"

[dev-dependencies]
regex = "1.4.3"
